 + Searching in the dust: Enable skip in entire mission
 * Searching in the dust: Fix mission ending when all smugglers are dead
 * Searching in the dust: Fix a lot of broken/stupid smuggler behaviours
 * Chasing the blue hog: Fix player not losing the race when timing out while still having the rope
 * Chasing the blue hog: Fix player winning if Crazy Runner died
 * Getting to the device: Fix clan colors
 * Various minor tweaks and bugfixes

Controls:
 + Add control to unselect current weapon (no key chosen by default)
 + Add support for 4th and 5th mouse buttons
 + Allow to leave a control unused
 + Reset zoom resets zoom to zoom level set in options
 + Add control to display mines time and health crate health (default: O)
 + Precise + Reset zoom resets zoom to 100% (instead of zoom in options)
 + Precise + zoom in/out changes zoom in smaller steps
 + Precise + volume up/down changes volume in smaller steps
 + Precise + cursor move keys move camera slower
 + New chat command: “/help room” (shows room chat commands within the game)
 + Default demo fast-forward key changed from “S” to “F”
 + Default fallback Sudden Death music of themes (fallback-sd-music) is now sdmusic.ogg
 * Fix broken default keyboard controls for team chat and camera movement

Graphics:
 + Animate drill rockets
 * Fix speech bubbles overlapping in the wrong order
 * Fix wrong ice beam angle if it goes diagonally up out of map through world wrap
 * Fix double water splash when flying saucer drowns
 * Fix odd floating pixels when wielding and rotating cleaver
 * Fix birdy being drawn behind hedgehogs and objects

Game HUD:
 + Display current hog health (and related status icons) at top right corner
 + Display laser sight icon above wind bar when laser sight utility is active
 + Display selected weapon above hedgehog for some weapons/tools
 + Change cursor of piano strike
 + Colorize switching arrows, pointing arrow and target cross in clan color